# themeda-preproc

./: README.md  pyproject.toml  run.sh
notebooks/: savanna_fire_scars.ipynb
src/ecofuture_preproc/: chiplet_geotiff.py  chiplet_table.py  chiplets.py  chips.py  cli.py  denan_chiplets.py  packet.py  roi.py  source.py  summary_stats.py  test_prep.py  transect.py  utils.py
src/ecofuture_preproc/climate/: acquire.py  plot_maps.py  prep.py  to_chips.py
src/ecofuture_preproc/dea/: acquire.py
src/ecofuture_preproc/elevation/: acquire.py  plot_maps.py  prep.py  to_chiplets.py  to_chips.py
src/ecofuture_preproc/fire_scar/: acquire.py  plot_maps.py  prep.py  to_chiplets.py  to_chips.py
src/ecofuture_preproc/land_cover/: acquire.py  labels.py  plot_maps.py  prep.py  to_chiplets.py  to_chips.py  utils.py  vis.py
src/ecofuture_preproc/land_use/: acquire.py  labels.py  plot_maps.py  prep.py  to_chiplets.py  to_chips.py
src/ecofuture_preproc/resources/relabel/: DEALC_to_LCNS_v2.csv  DEALandCover_to_LCNS_v2.xlsx  LCNS_codes_colours.csv  LandUseCollapse_allVersions.csv
src/ecofuture_preproc/resources/vis/: veusz_stylesheet.vst
src/ecofuture_preproc/soil/: plot_maps.py  prep.py  to_chiplets.py  to_chips.py
src/ecofuture_preproc/vis/: colourmap.py  maps.py  utils.py
src/themeda_preproc/: chiplet_geotiff.py  chiplet_table.py  chiplets.py  chips.py  cli.py  denan_chiplets.py  hashcheck.py  packet.py  pad_chiplets.py  roi.py  summary_stats.py
src/themeda_preproc/climate/: acquire.py  plot_maps.py  to_chiplets.py  to_chips.py
src/themeda_preproc/elevation/: plot_maps.py  to_chips.py
src/themeda_preproc/fire_scar/: acquire.py  plot_maps.py  to_chiplets.py  to_chips.py
src/themeda_preproc/land_cover/: acquire.py  colourmap.py  labels.py  plot_maps.py  prep.py  to_chiplets.py  to_chips.py  utils.py
src/themeda_preproc/land_use/: labels.py  plot_maps.py  prep.py  to_chiplets.py
src/themeda_preproc/resources/relabel/: LandUseCollapse_allVersions.csv
src/themeda_preproc/soil/: acquire.py  prep.py  to_chiplets.py  to_chips.py
src/themeda_preproc/vis/: colourmap.py  maps.py  utils.py
tests/: conftest.py  test_chiplets.py  test_roi.py  test_utils.py  test_welford.py
